--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.23.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
